--- a/freemind/.classpath
+++ b/freemind/.classpath
@@ -35,15 +35,15 @@
 	<classpathentry kind="lib" path="plugins/collaboration/database/hsqldb.jar" sourcepath="plugins/collaboration/database/hsqldb_1_8_1_3.zip"/>
 	<classpathentry kind="lib" path="plugins/map/JMapViewer.jar" sourcepath="plugins/map/JMapViewer_src.jar"/>
 	<classpathentry kind="lib" path="lib/jortho.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/cglib-2.1_3-src.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/cglib-nodep-2.1_3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/hamcrest-core-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/hamcrest-library-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/jmock-2.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/jmock-junit3-2.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/jmock-junit4-2.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/jmock-legacy-2.4.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/XPherior/Desktop/freemind/freemind/lib/objenesis-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-2.1_3-src.jar"/>
+	<classpathentry kind="lib" path="lib/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-core-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-library-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-junit3-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-junit4-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-legacy-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/objenesis-1.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
