--- a/freemind/.classpath
+++ b/freemind/.classpath
@@ -37,8 +37,8 @@
 	<classpathentry kind="lib" path="lib/jortho.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jmock-2.5.1/bsh-core-2.0b4.jar"/>
-	<classpathentry kind="lib" path="lib/jmock-2.5.1/clib-2.1_3-src.jar"/>
-	<classpathentry kind="lib" path="lib/jmock-2.5.1/clib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-2.5.1/cglib-2.1_3-src.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-2.5.1/cglib-nodep-2.1_3.jar"/>
 	<classpathentry kind="lib" path="lib/jmock-2.5.1/hamcrest-core-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/jmock-2.5.1/hamcrest-library-1.1.jar"/>
 	<classpathentry kind="lib" path="lib/jmock-2.5.1/jmock-2.5.1.jar"/>
