--- a/freemind/.classpath
+++ b/freemind/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="**/build*.xml|**/build.xml|**/cvs/|lib/|plugins/collaboration/jabber/**|windows-launcher/**" kind="src" path=""/>
+	<classpathentry excluding="**/build*.xml|**/build.xml|**/cvs/|lib/|plugins/collaboration/jabber/**|windows-launcher/**|doc/|bin/|html/|images/|plugins/|eclipe_templates/" kind="src" path=""/>
 	<classpathentry kind="lib" path="plugins/svg/xml-apis.jar"/>
 	<classpathentry kind="lib" path="plugins/svg/batik-bridge.jar"/>
 	<classpathentry kind="lib" path="plugins/svg/batik-css.jar"/>
